test/integration/bad/new/bad_constrained_type_in_model.stan
model {
  array[3] simplex[2] x;
  print(x);
}
